deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adac-blockchain-service
spec:
  selector:
    app: adac-blockchain
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
