deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adac-blockchain-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: blockchain.adac.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adac-blockchain-service
            port:
              number: 80
